package com.lldprep.systems.moviebooking.model.enums;

public enum BookingStatus {
    PENDING,
    CONFIRMED,
    CANCELLED,
    EXPIRED
}
