package com.lldprep.systems.moviebooking.model.enums;

public enum City {
    BANGALORE,
    MUMBAI,
    DELHI,
    HYDERABAD,
    CHENNAI
}
